[package]
name = "mqtt_packet"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parse/Encode MQTT5 and MQTT3 messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }