[package]
name = "mqtt_packet_3_5"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Parse/Encode MQTT5 and MQTT3 messages"
repository = "https://github.com/SquattingSocrates/mqtt_packet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }